--- a/starter-code/src/App.css
+++ b/starter-code/src/App.css
@@ -26,3 +26,16 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.search {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.name-price {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
